# controllers/Purchase.js
@@ -33,8 +33,8 @@ module.exports.getPurchase = function getPurchase (req, res, next, purchaseId) {
         });
 };
 
-module.exports.getPurchases = function getPurchases (req, res, next, companyId, pageSize, keyPage, date) {
-    Purchase.getPurchases(companyId, pageSize, keyPage, date)
+module.exports.getPurchases = function getPurchases (req, res, next, customerId, pageSize, keyPage, startDate, endDate) {
+    Purchase.getPurchases(customerId, pageSize, keyPage, startDate, endDate)
         .then(function (response) {
             utils.writeJson(res, response);
         })
